# sample-bazel-googletest

./: .gitignore  MODULE.bazel  README.md
benchmark/: BUILD.bazel  benchmark_test.cc
lib/: BUILD.bazel  word_generator.cpp  word_generator.h
main/: BUILD.bazel
test/: BUILD.bazel  word_generator_test.cc
