###############################################################################
# Bazel now uses Bzlmod by default to manage external dependencies.
# Please consider migrating your external dependencies from WORKSPACE to MODULE.bazel.
#
# For more details, please check https://github.com/bazelbuild/bazel/issues/18958
###############################################################################

# MODULE.bazel

# Choose the most recent version available at
# https://registry.bazel.build/modules/abseil-cpp.
bazel_dep(name = "abseil-cpp", version = "20240116.0")

# For our unit test we use the GoogleTest framework.
# https://registry.bazel.build/modules/googletest
bazel_dep(name = "googletest", version = "1.14.0")

bazel_dep(name = "google_benchmark",version = "1.8.3")